# crnn_models_single_gpu

./: .gitignore  Dockerfile  README.md  build_docker-hyperparameter_tuner.sh  build_docker-one_model_trainer.sh  build_docker-one_model_traner.sh  check_docker_contents.sh  requirements.txt  setup.cfg
hyperparameter_tuner/: Dockerfile  README.md  bayes_search_results.ipynb  create_dataset.py  create_model.py  docker_build.sh  in-workbench-tuner.ipynb  task-hparam_grid_search.py  task-ray_tuner.py  task.py  trainer_config.py
one_model_trainer/: Dockerfile  README.md  arguments.py  create_dataset.py  create_model.py  docker_build.sh  task.py  trainer_config.py
test_set_predictions/: README.md  create_dataset.py  generate_predictions.ipynb  make_predictions.py  processing.py  task.py  test_config.py  trainer_config.py  utilities.py  visualize-predictions.ipynb  visualize_predictions.ipynb
test_set_predictions/model/: keras_metadata.pb  run_41_all-training_history.csv  run_41_train-training_history.csv  run_55_all-training_history.csv
test_set_predictions/model/variables/: variables.index
transfer_learning/: create_dataset.py  create_model.py  task.py  tl.ipynb  trainer_config.py  utilities.py
utilities/: __init__.py  charts.py  config_loader.py  configurations.py  create_dataset.py  create_model.py  gpu_tools.py  trainer_config.py
