[project]
IMAGE_FORMAT = png
MAX_LABEL_LENGTH = 30
BATCH_SIZE = 128
IMG_HEIGHT = 100
IMG_WIDTH = 400
METADATA_FILE_NAME = words_metadata.csv
METADATA_IMAGE_COLUMN = word_image_location
METADATA_TRANSCRIPTION_COLUMN = human_transcription
# METADATA_IMAGE_COLUMN = image_location
# METADATA_TRANSCRIPTION_COLUMN = transcription

[tune]
NUM_EPOCHS = 15
NUM_CALLS = 30
NUM_RANDOM_STARTS = 5
IMAGE_SET_NAME = image_sets/IAM_words_train

[train]
NUM_EPOCHS = 125
SEED = 2
EARLY_STOPPING = True
LEARNING_RATE = 0.0005
IMAGE_SET_NAME = image_sets/IAM_words_train

[test]
IMAGE_SET_NAME = image_sets/steyermark_6994_split/test
