[project]
IMAGE_FORMAT = png
MAX_LABEL_LENGTH = 30
IMG_HEIGHT = 100
IMG_WIDTH = 400
METADATA_FILE_NAME = words_metadata.csv
METADATA_IMAGE_COLUMN = word_image_location
METADATA_TRANSCRIPTION_COLUMN = human_transcription
# METADATA_IMAGE_COLUMN = image_location
# METADATA_TRANSCRIPTION_COLUMN = transcription

[tune]
NUM_EPOCHS = 15
NUM_CALLS = 30
NUM_RANDOM_STARTS = 5
IMAGE_SET_NAME = image_sets/IAM_words_train

[train]
NUM_EPOCHS = 125
SEED = 2
EARLY_STOPPING = True
IMAGE_SET_NAME = image_sets/IAM_words_train
LEARNING_RATE = 0.0005
BATCH_SIZE = 105
KERNEL_SIZE = 5
ACTIVATION_FUNCTION = 'relu'
NUM_UNITS_DENSE = 128
DROPOUT = 0.12489316869910207
NUM_UNITS_LSTM1 = 512
NUM_UNITS_LSTM2 = 1024

[test]
IMAGE_SET_NAME = image_sets/steyermark_6994_split/test
